<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout" android:id="@+id/linearLayout2">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="135dp">
            <ImageView
                    android:layout_width="273dp"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/employee1" android:id="@+id/imageView"
                    android:layout_weight="1" android:contentDescription="@string/image"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="154dp" android:layout_weight="1">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/firstnameTextView"
                        android:text="@string/firstname"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/lastnameTextView"
                        android:text="@string/lastname"/>
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/jobtitleTextView"
                        android:text="@string/jobtitle"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/employee_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/employeeInfoTextView"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="395dp"
            android:layout_height="32dp"
            android:id="@+id/linearLayout" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
        <TextView
                android:id="@+id/oneTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_1"
                android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:id="@+id/twoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_2"
                android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:id="@+id/threeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_3"
                android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:id="@+id/fourTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_4"
                android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:id="@+id/fiveTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_5"
                android:textAlignment="center"
                android:onClick="numberClicked"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>